--- a/music.css
+++ b/music.css
@@ -16,17 +16,124 @@ section.music {
   grid-area: 2 / 1 / 3 / 2;
 }
 
-.player h2 {
+.song h2 {
   /* font-family: var(--lora-family); */
   font-family: var(--oswald-family);
 }
 
-.player h4 {
+.song h4 {
   font-family: var(--oswald-family);
   font-weight: lighter;
 }
 
-.player h5 {
+.song h5 {
   font-family: var(--lora-family);
   color: var(--brown-col);i
+}
+
+.player {
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  /* align-items: center; */
+  /* align-content: center; */
+  /* justify-content: center; */
+  /* justify-items: center; */
+}
+
+.track {
+  grid-column: 1 / 4;
+}
+
+:root {
+  --player-arrow: 16px;
+  --track-position: 35%;
+}
+
+.player .prev {
+  cursor: pointer;
+  width: 0;
+  border: var(--player-arrow) solid rgba(0,0,0,0);
+  border-right: calc(var(--player-arrow)*2) solid var(--brown-light);
+}
+
+.player .prev::before {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: calc(var(--player-arrow)*2);
+  content: '';
+  /* width: 0; */
+  border: var(--player-arrow) solid rgba(0,0,0,0);
+  border-right: calc(var(--player-arrow)*2) solid var(--brown-light);
+}
+
+.player .next {
+  transform: rotate(180deg);
+}
+
+.player .control {
+  position: relative;
+}
+
+.player .control .play {
+  position: absolute;
+  cursor: pointer;
+  width: 0;
+  border: var(--player-arrow) solid rgba(0,0,0,0);
+  border-right: calc(var(--player-arrow)*2) solid var(--brown-light);
+  transform: rotate(180deg);
+}
+
+.player .control .pause {
+  display: none;
+  position: absolute;
+  cursor: pointer;
+  content: '';
+  height: calc(var(--player-arrow)*2);
+  width: var(--player-arrow);
+  width: calc(var(--player-arrow)/1.5);
+  background-color: var(--brown-light);
+}
+
+.player .control .pause::before {
+  position: absolute;
+  content: '';
+  left: var(--player-arrow);
+  height: calc(var(--player-arrow)*2);
+  width: calc(var(--player-arrow)/1.5);
+  background-color: var(--brown-light);
+}
+
+.player .track {
+  cursor: pointer;
+  position: relative;
+  height: calc(var(--player-arrow)/2);
+  border-radius: calc(var(--player-arrow));
+  background-color: var(--brown-light);
+  background-color: var(--brown-col);
+}
+
+.player .current {
+  position: absolute;
+  height: var(--player-arrow);
+  width: var(--player-arrow);
+  border-radius: 50%;
+  background-color: var(--brown-col);
+  top: -50%;
+  left: calc(var(--track-position) - (var(--player-arrow)/2));
+}
+
+.player .progress {
+  position: absolute;
+  top: 0;
+  width: var(--track-position);
+  height: calc(var(--player-arrow)/2);
+  border-radius: calc(var(--player-arrow));
+  background-color: var(--brown-col);
+  background-color: var(--brown-light);
 }
