--- a/about.css
+++ b/about.css
@@ -27,7 +27,7 @@ figure .img {
   display: block;
   width: 100%;
   height: 100vh;
-  filter: sepia(100%) grayscale(100%);
+  filter: sepia(100%);
   background-image: url('https://source.unsplash.com/JTa5MN7ObbM/1600x900');
   background-repeat: no-repeat;
   background-position: center;
@@ -128,7 +128,15 @@ figure.musician-img figcaption {
 
 .musicians .list-name .active {
   color: var(--brown-col);
+  /* transition: 1s; */
+  animation: lname 1s .2s;
 }
+@keyframes lname {
+  0% {transform:translateX(-200px);}
+  100% {transform:translateX(0px);}
+
+}
+
 .musicians .list-name .active.circle {
   background-color: var(--brown-col);
 }
