js playlist and albums

--- a/music.css
+++ b/music.css
@@ -5,7 +5,7 @@ section.music {
 .album {
   padding: 20px 40px;
   display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
+  grid-template: auto 1fr / 1fr 1fr;
 }
 
 .cover img{
