--- a/music.css
+++ b/music.css
@@ -15,6 +15,7 @@ section.music {
   padding: 20px 40px;
   display: grid;
   grid-template: auto 1fr / 1fr 1fr;
+  grid-gap: 1em;
 }
 
 .cover img{
@@ -99,7 +100,7 @@ section.music {
 }
 
 .circle {
-  
+
 }
 
 .player .arrow {
