--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 @import './header.css';
 @import './about.css';
 @import './music.css';
+@import './admin.css';
 
 :root {
    --lora-family: 'Lora', serif;
