--- a/header.css
+++ b/header.css
@@ -1,4 +1,4 @@
-header {
+.header header {
   background: url('./The Band PSD/The Band PSD-assets/Header.png');
   background-size: cover;
   background-repeat: no-repeat;
