--- a/style.css
+++ b/style.css
@@ -32,8 +32,10 @@ section, footer {
 .container {
   max-width: 1200px;
   margin: auto;
-  box-shadow: -20px 0px 100px 0px rgba(1,1,1,.5),
-               20px 0px 100px 0px rgba(1,1,1,.5);
+  /* box-shadow: -20px 0px 100px 0px rgba(1,1,1,.5), */
+               /* 20px 0px 100px 0px rgba(1,1,1,.5); */
+  box-shadow: -30px 0px 50px 0px rgba(1, 1, 1, 0.11),
+              30px 0px 50px 0px rgba(1, 1, 1, 0.11);
   background: white;
   position: relative;
 }
